Rajout des images

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,7 +93,7 @@
 
 
     <section>
-      <img src="logo_appsy.png" height=250px>
+      <img src="images/logo_appsy.png" height=250px>
       <div>
         <h3>Nos clients</h3>
         <p>Déjà X clients</p>
@@ -122,13 +122,13 @@
           Nam ut justo eget quam aliquam bibendum nec et erat.
         </p>
       </div>
-      <img src="logo_appsy.png" height=250px>
+      <img src="images/logo_appsy.png" height=250px>
     </section>
 
 
 
     <section>
-      <img src="Infinite_measures.png" height=250px>
+      <img src="images/Infinite_measures.png" height=250px>
       <div>
         <h3>Infinite Measures</h3>
         <p>Description de l'entreprise et quelques chiffres clés.</p>
