--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,8 +21,9 @@
 
     <!--éléments de l'entêtes-->
     <nav>
-      <img src="images/logo_testify.png" width="90px" height="90px" style="margin-left: 20px">
-      <h1>Testify</h1>
+      <img src="images/logo_testify.png" width="70px" height="70px" style="margin-left: 10px">
+      <h1>Accueil</h1>
+      <h1>Découvrir Testify</h1>
       <div class="btn-group-1">
         <a href="inscription.html"><button>Inscription</button></a>
         <a href="connexion.html"><button>Connexion</button></a>
