travail du style des boutons arrondis et restructuration

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,15 +8,13 @@
   </head>
   <body>
 
+    <!--Page d'accueil -->
     <div class="page_accueil">
       <img src="images/logo_testify.png" width="650px" height="650px">
-
       <div>
         <h1>Welcome to Testify</h1>
         <h3> the psychotechnical webside  test that will save the world</h3>
-
       </div>
-
     </div>
 
     <!--éléments de l'entêtes-->
@@ -24,22 +22,22 @@
       <img src="images/logo_testify.png" width="70px" height="70px" style="margin-left: 10px">
       <h1>Accueil</h1>
       <h1>Découvrir Testify</h1>
-      <div class="btn-group-1">
-        <a href="inscription.html"><button>Inscription</button></a>
-        <a href="connexion.html"><button>Connexion</button></a>
-        <a href="nous_rejoindre.html"><button>Nous rejoindre</button></a>
-      </div>
+      <ul class="btn-group-1">
+          <li><a href="inscription.html">Inscription</a></li>
+          <li><a href="connexion.html">Connexion</a></li>
+          <li><a href="nous_rejoindre.html">Nous rejoindre</a></li>
+      </ul>
     </nav>
 
 
     <!--Boutons de la barre de navigation-->
     <div class="navigation">
-      <div class="btn-group-2">
-        <a href="notre_produit.html"><button>Notre produit</button></a>
-        <a href="nos_offres.html"><button>Nos offres</button></a>
-        <a href="on_en_parle.html"><button>On en parle</button></a>
-        <a href="infinite_measures.html"><button>Infinite Measures</button></a>
-      </div>
+      <ul class="btn-group-2">
+        <li><a href="notre_produit.html">Notre produit</a></li>
+        <li><a href="nos_offres.html">Nos offres</a></li>
+        <li><a href="on_en_parle.html">On en parle</a></li>
+        <li><a href="infinite_measures.html">Infinite Measures</a></li>
+      </ul>
     </div>
 
 
