- Correction du CSS avec clean du code + suppressions des glitch pour les box-shadows

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,16 +9,16 @@
   <body>
 
     <!--Page d'accueil -->
-    <div class="page_accueil">
+    <!--<div class="page_accueil">
       <img src="images/logo_testify.png" width="650px" height="650px">
       <div>
         <h1>Welcome to Testify</h1>
         <h3> the psychotechnical webside  test that will save the world</h3>
       </div>
-    </div>
+    </div>-->
 
     <!--éléments de l'entêtes-->
-    <nav>
+    <nav class="header-nav">
       <img src="images/logo_testify.png" width="70px" height="70px" style="margin-left: 10px">
       <h1>Accueil</h1>
       <h1>Découvrir Testify</h1>
