- Correction des éléments de la barre de navigation - Ajout d'un smooth scrolling en JavaScript

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,16 +33,16 @@
     <!--Boutons de la barre de navigation-->
     <div class="navigation">
       <ul class="btn-group-2">
-        <li><a href="notre_produit.html">Notre produit</a></li>
-        <li><a href="nos_offres.html">Nos offres</a></li>
-        <li><a href="on_en_parle.html">On en parle</a></li>
-        <li><a href="infinite_measures.html">Infinite Measures</a></li>
+        <li><a href="#product">Notre produit</a></li>
+        <li><a href="#offers">Nos offres</a></li>
+        <li><a href="#review">On en parle</a></li>
+        <li><a href="#client">Infinite Measures</a></li>
       </ul>
     </div>
 
 
 
-    <section>
+    <section id="product">
       <img src="images/logo_testify.png" width=300px>
       <div>
         <h3>Testify</h3>
@@ -58,7 +58,7 @@
 
 
 
-    <section>
+    <section id="offers">
       <div>
         <h3>Nos offres</h3>
         <p>Achat définitif X€</p>
@@ -109,7 +109,7 @@
 
 
 
-    <section>
+    <section id="review">
       <div>
         <h3>On en parle</h3>
         <p>Titres articles :
@@ -126,7 +126,7 @@
 
 
 
-    <section>
+    <section id="client">
       <img src="images/Infinite_measures.png" height=250px>
       <div>
         <h3>Infinite Measures</h3>
@@ -147,5 +147,8 @@
         <a href="conditions_generales_de_ventes.html">Conditions générales de ventes</a> &#xa9; 2019, Testify.fr Powered by our own skills
       </p>
     </footer>
+
+    <script type="text/javascript" src="vendor/jquery/jquery-3.4.1.min.js" ></script>
+    <script type="text/javascript" src="scripts/scrolling.js" ></script>
   </body>
 </html>
