Ajout d'un bouton "nos clients". Changements de padding et de margin. Ajout de overflow pour les pages d'autres dimensions. Changement de la position du footer pour ne pas manger sur la marge de la dernière section.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,6 +35,7 @@
       <ul class="btn-group-2">
         <li><a href="#product">Notre produit</a></li>
         <li><a href="#offers">Nos offres</a></li>
+        <li><a href="#customers">Nos clients</a></li>
         <li><a href="#review">On en parle</a></li>
         <li><a href="#client">Infinite Measures</a></li>
       </ul>
@@ -91,7 +92,7 @@
 
 
 
-    <section>
+    <section id="customers">
       <img src="images/logo_appsy.png" height=250px>
       <div>
         <h3>Nos clients</h3>
